# fuel-aware-route-planner

./: .env  .env.example  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml  pytest.ini
pathfinder/: __init__.py  asgi.py  celery_app.py  geocode.py  manage.py  settings.py  urls.py  wsgi.py
pathfinder/ingest/: models.py  serializers.py  tasks.py  urls.py  views.py
pathfinder/routing/: docker-compose.yml  models.py  serializers.py  services.py  urls.py  views.py
pathfinder/routing/migrations/: 0001_initial.py  0002_route_json.py
tests/: test_ingest_api.py  test_ingest_tasks.py  test_routing.py  test_routing_api.py  test_routing_business_logic.py
